Fri Jan 23 02:28:12 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstutils.c: added more sfidl pspec constructors.

	* tests/Makefile.am: disabled C++ API generation which still
	breaks, though most of the core C++ binding works now.

	* tests/testplugin.idl: added more test code.

Thu Jan 22 03:40:51 2004  Tim Janik  <timj@gtk.org>

	* docs/site-navigation.xml: added search and wiki pages.

	* docs/site-news.texi: rotate news, announce wiki.

	* docs/generated/Makefile.am: support php targets, using a perl
	script hack to embedd php code in PHPX...XPHP in .texi files.

	* docs/search.texi: new page to search the website.

	* docs/wiki.texi: new page to embedd a beast wiki, based on ErfurtWiki.

Wed Jan 21 03:34:54 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstutils.c (sfidl_pspec_BoxedRec): implement BoxedRec pspec
	constructors.

Wed Jan 21 03:26:00 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testplugin.*: Commented out TestRecord (doesn't compile right
	now).

Tue Jan 20 23:22:43 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstrecords.idl: Added "using namespace Sfi;".

	* tests/testplugin.idl: New testcase for records/sequences.

	* tests/cxxbinding.cc: Adapted to renames (due to record/sequence
	binding in C++).

	* tests/perftest.cc: From milliseconds to seconds.

Tue Jan 20 05:09:07 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testplugin.idl: Added "using namespace Sfi;".

	* docs/sfidl.texi: Removed ";" after namespace decls.

Tue Jan 20 03:11:17 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/Makefile.am: No more bse/bsecxxsmart.h.

Tue Jan 20 02:50:56 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/cxxbinding.cc: Using Sfi::Sequence now (instead of
	Bse::Sequence).

Tue Jan 20 02:16:31 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/cxxbinding.cc: Use RecordHandle<...> instead of SmartPtr<...>
	for records.

Tue Jan 20 01:17:06 2004  Stefan Westerfeld  <stefan@space.twc.de>
