@@ -1,3 +1,8 @@
+Fri Jan 23 22:39:49 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/Makefile.am: reenable test builds which compile again due to
+	sfidl fixes.
+
 Fri Jan 23 02:28:12 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstutils.c: added more sfidl pspec constructors.
